# kernel_integrity

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  configure.ac  doxygen.cfg
m4/: ax_boost_filesystem.m4  ax_cxx_compile_stdcxx_11.m4  ax_prog_doxygen.m4
src/: .gitignore  Makefile.am  elffile.cpp  elffile.h  elffile32.cpp  elffile32.h  elffile64.cpp  elffile64.h  elfkernelloader.cpp  elfkernelloader.h  elfkernelloader32.cpp  elfkernelloader32.h  elfkernelloader64.cpp  elfkernelloader64.h  elfkernelspaceloader.cpp  elfkernelspaceloader.h  elfloader.cpp  elfloader.h  elfmodule.h  elfmoduleloader.cpp  elfmoduleloader.h  elfmoduleloader32.cpp  elfmoduleloader32.h  elfmoduleloader64.cpp  elfmoduleloader64.h  elfprocessloader.cpp  elfprocessloader.h  elfprocessloader64.cpp  elfprocessloader64.h  elfuserspaceloader.cpp  elfuserspaceloader.h  elfuserspaceloader64.cpp  elfuserspaceloader64.h  error.cpp  error.h  exceptions.cpp  exceptions.h  helpers.cpp  helpers.h  kernel.cpp  (+26 more)
